# Neural-Digit-Recognizer

Neural Digit Recognizer/: README.md  config.py  evaluate.py  export.py  main.py  model.py  pyproject.toml  requirements.txt  server.py  utils.py
Neural Digit Recognizer/experiments/: config_20260529_130844.json  experiment_20260529_134156.json
Neural Digit Recognizer/saved_model/: mnist_advanced.tflite  mnist_advanced_fp16.tflite  mnist_advanced_int8.tflite
Neural Digit Recognizer/templates/: index.html
