[project]
name = "mnist-digit-recognizer"
version = "2.0.0"
description = "Advanced MNIST Digit Recognizer with Residual CNN, SE Attention, GradCAM, and Gradio Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "tensorflow>=2.20.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
    "gradio>=4.0.0",
    "tensorboard>=2.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
onnx = ["tf2onnx>=1.16.0", "onnx>=1.15.0"]
